--- a/AI automation/.env
+++ b/AI automation/.env
@@ -1,7 +1,3 @@
-# API_KEY = 65kilT0ve8dN2q2WlGWOtw85q
-# API_SECRET = suQx3B6h5g2tnLRlEjTVgpUKGxEyxnHH1mL8VYVJJP2hzuVDZa
-# ACCESS_TOKEN = 1601504754026389504-w5vV2xmfSDuKYYJ1UIsbyQ3f9zL7b3
-# ACCESS_TOKEN_SECRET = B837rQObSYK66n6Romzh4qEwjSUOcwNu63IKVIQy91fmA
-
 TELEGRAM_BOT_TOKEN= 7593455526:AAFxr0RMZzrWATnV_0HeUGWtabg-mzlgyuo
 TELEGRAM_CHAT_ID= 6250128658
+TMDB_API_KEY=8037fcef85b40c1db9bb24603d2dcb66
