--- a/AI automation/.env
+++ b/AI automation/.env
@@ -1,2 +1,3 @@
 TELEGRAM_BOT_TOKEN= 7593455526:AAFxr0RMZzrWATnV_0HeUGWtabg-mzlgyuo
 TELEGRAM_CHAT_ID= 6250128658
+TMDB_API_KEY=8037fcef85b40c1db9bb24603d2dcb66
